Add GEO AEO foundation
